{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerClick",
            "id": "7f06d7f6-ba43-4f7d-816f-860ee464fe4d",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "0cba37ec-0976-4be3-ac35-aae23b061ff3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "4d92e47c-0090-4aa6-b543-375d1c4d4d41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27a5ed63-464a-444c-a26f-74bb16e91a78",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97d00b6a-bd6b-4666-933b-768e189b6ebe",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7571f392-db37-4b5a-8450-fcd3fa1db4e4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d0a20fe-acee-4a00-8e07-f0c1e9ebbf36",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}